--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="rng.js" type="module"></script>
+	<script src="lz-string.js" type="module"></script>
 </head>
 <body>
 <p> Test </p>
+<span>Import save: <input type="text" id="saveInput" /></span>
 </body>
 </html>
