--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="lz-string.js" type="module"></script>
 </head>
 <body>
-<p> Test 1</p>
+<p> Test </p>
 <span>Import save: <input type="text" id="saveInput" /></span>
 </body>
 </html>
