--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		var save
 	</script>
 	<script src="rng.js" type="module"></script>
+	<script src="config.js" type="module"></script>
 </head>
 <body>
 <p> Test </p>
