--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	</script>
 	<script src="rng.js" type="module"></script>
 	<script src="config.js" type="module"></script>
+	<script>
+		var game = newGame();
+	</script>
 </head>
 <body>
 <p> Test </p>
