--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="config.js" type="module"></script>
 	<script>
 		var save
-		var game = newGame();
+		var game = newGame.newGame();
 	</script>
 </head>
 <body>
