--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script>
+		var save;
+		var game;
+	</script>
 	<script src="rng.js" type="module"></script>
 	<script src="config.js" type="module"></script>
-	<script>
-		var save
-		var game = newGame.newGame();
-	</script>
 </head>
 <body>
 <p> Test </p>
