--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	</script>
 	<script src="rng.js" type="module"></script>
 	<script src="config.js" type="module"></script>
+	<script>
+		createHeirloom(200)	
+	</script
 </head>
 <body>
 <p> Test </p>
