--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		var save;
 		var game;
 	</script>
-	<script src="rng.js" type="module"></script>
-	<script src="config.js" type="module"></script>
+	<script src="rng.js"></script>
+	<script src="config.js"></script>
 	<script>
 		createHeirloom(200)	
-	</script
+	</script>
 </head>
 <body>
 <p> Test </p>
