--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script>
-		var save;
-		var game;
-	</script>
+
 	<script src="rng.js"></script>
 	<script src="config.js"></script>
+	<script src="lz-string.js"></script>
 	<script>
 		createHeirloom(200)	
 	</script>
