--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 <p> Test </p>
 <span>Import save: <input type="text" id="saveInput" /></span>
+	
+<p id ="heirloom"><\p>
 </body>
 
 	<script src="config.js"></script>
