--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p> Test </p>
 <span>Import save: <input type="text" id="saveInput" /></span>
 	
-<p id ="heirloom"><\p>
+<p id ="heirloom"></p>
 </body>
 
 	<script src="config.js"></script>
