--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 <p> Test </p>
 <span>Import save: <input type="text" id="saveInput" /></span>
+<span>Low zone: <input type="text" id="lowZoneText" /></span>
+<span>High zone: <input type="text" id="highZoneTextt" /></span>
 	
 <p id ="heirloom"></p>
 </body>
