--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 <p> Test </p>
-<span>Import save: <input type="text" id="saveInput" /></span>
-<span>Low zone: <input type="text" id="lowZoneText" /></span>
-<span>High zone: <input type="text" id="highZoneTextt" /></span>
+<span>  
+	Import save: <input type="text" id="saveInput" /><br>
+	Low zone: <input type="text" id="lowZoneText" /><br>
+	High zone: <input type="text" id="highZoneTextt" />
+</span>
 	
 <p id ="heirloom"></p>
 </body>
