--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	High zone: <input type="text" id="highZoneTextt" />
 </span>
 	
+	<script>
+                for (var i = 0; i <5; i++) {
+                    document.write('<p id ="heirloom"' + i +' ></p>');
+                }
+            
+         </script> 
 <p id ="heirloom"></p>
 </body>
 
