--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	Import save: <input type="text" id="saveInput" /><br>
 	Low zone: <input type="text" id="lowZoneText" /><br>
 	High zone: <input type="text" id="highZoneTextt" />
-	<button type="button" id"heirloomSearchButton>Search for heirlooms</button>
+	<button type="button" id="heirloomSearchButton">Search for heirlooms</button>
 </span>
 	
 	<script>
