--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<script>
                 for (var i = 0; i <5; i++) {
-                    document.write('<p id ="heirloom"' + i +' ></p>');
+                    document.write('<p id ="heirloom' + i +'" ></p>');
                 }
             
          </script> 
