--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <span>  
 	Import save: <input type="text" id="saveInput" /><br>
 	Low zone: <input type="text" id="lowZoneText" /><br>
-	High zone: <input type="text" id="highZoneTextt" />
+	High zone: <input type="text" id="highZoneText" />
 	<button type="button" id="heirloomSearchButton">Search for heirlooms</button>
 </span>
 	
