--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <body>
 <p> Test </p>
 <span>  
-	Import save: <input type="text" id="saveInput" /><br>
-	Low zone: <input type="text" id="lowZoneText" /><br>
-	High zone: <input type="text" id="highZoneText" />
-	<button type="button" id="heirloomSearchButton">Search for heirlooms</button>
+	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
+	Low zone: <input type="text" id="lowZoneText" title="Low zone to advance heirloom rng at."/><br>
+	High zone: <input type="text" id="highZoneText" title="High zone with desired heirloom rarity"/>
+	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
+							Search for heirlooms</button>
 </span>
 	
 	<script>
