--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <span>  
 	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
 	Low zone: <input type="text" id="lowZoneText" title="Low zone to advance heirloom rng at."/><br>
-	High zone: <input type="text" id="highZoneText" title="High zone with desired heirloom rarity"/>
+	High zone: <input type="text" id="highZoneText" title="High zone with desired heirloom rarity"/><br>
 	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
 							Search for heirlooms</button>
+	<button type="button" id="nextFiveButtons" title="Search for next 5 highest rarity heirlooms at high zone.">
+							Find Next 5</button>
 </span>
 	
 	<script>
