--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	High zone: <input type="text" id="highZoneText" title="High zone with desired heirloom rarity"/><br>
 	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
 							Search for heirlooms</button>
-	<button type="button" id="nextFiveButtons" title="Search for next 5 highest rarity heirlooms at high zone.">
+	<button type="button" id="nextFiveButton" title="Search for next 5 highest rarity heirlooms at high zone.">
 							Find Next 5</button>
 </span>
 	
