--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 <span>  
 	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
 	Zone to advance RNG: <input type="text" id="lowZoneText" title="Lower zone to advance heirloom RNG at or where you typically do voids."/>
+	<input type="radio" name="low">U1
+      	<input type="radio" name="low">U2
 	<button type="button" id="lowNextFiveButton" title="Show the heirlooms at this zone.">
 							Next 5 Here</button><br>
 	Zone for max rarity: <input type="text" id="highZoneText" title="Higher zone with desired heirloom rarity"/>
+	<input type="radio" name="high">U1
+      	<input type="radio" name="high">U2
 	<button type="button" id="highNextFiveButton" title="Show the heirlooms at this zone.">
 							Next 5 Here</button><br><br>
 	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
