--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
                 for (var i = 0; i <5; i++) {
                     document.write('<p id ="heirloom' + i +'" ></p>');
                 }
+		
+		for (var i = 0; i <5; i++) {
+                    document.write('<span>Test ' + i + '</span>');
+                }
             
         </script> 
+
+	
 </body>
 
 	<script src="config.js"></script>
