--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
 	
 	<script>
                 for (var i = 0; i <5; i++) {
-                    document.write('<p id ="heirloom' + i +'" ></p>');
+                    document.write('<span id ="heirloom' + i +'" ></span>');
                 }
-		
-		for (var i = 0; i <5; i++) {
-                    document.write('<span>Test ' + i + '</span>');
-                }
-            
         </script> 
 
 	
