--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<script>
                 for (var i = 0; i <5; i++) {
-                    document.write('<span id ="heirloom' + i +'" ></span>');
+                    document.write('<p id ="heirloom' + i +'" ></p>');
                 }
         </script> 
 
