--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<button type="button" id="lowNextFiveButton" title="Show the heirlooms at this zone.">
 							Next 5 Here</button><br>
 	Zone for max rarity: <input type="text" id="highZoneText" title="Higher zone with desired heirloom rarity"/>
-	<input type="radio" name="high" onclick="setLowUniverse(this);" value="1">U1
-      	<input type="radio" name="high" onclick="setLowUniverse(this);" value="2">U2
+	<input type="radio" name="high" onclick="setHighUniverse(this);" value="1">U1
+      	<input type="radio" name="high" onclick="setHighUniverse(this);" value="2">U2
 	<button type="button" id="highNextFiveButton" title="Show the heirlooms at this zone.">
 							Next 5 Here</button><br><br>
 	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
