--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 	Zone to advance RNG: <input type="text" id="lowZoneText" title="Lower zone to advance heirloom RNG at or where you typically do voids."/>
 	<input type="radio" name="low" onclick="setLowUniverse(this);" value="1">U1
       	<input type="radio" name="low" onclick="setLowUniverse(this);" value="2">U2
-	<button type="button" id="lowNextFiveButton" title="Show the heirlooms at this zone.">
+	<button type="button" id="lowNextFiveButton" title="Show the next 5 heirlooms at this zone.">
 							Next 5 Here</button><br>
 	Zone for max rarity: <input type="text" id="highZoneText" title="Higher zone with desired heirloom rarity"/>
 	<input type="radio" name="high" onclick="setHighUniverse(this);" value="1">U1
       	<input type="radio" name="high" onclick="setHighUniverse(this);" value="2">U2
-	<button type="button" id="highNextFiveButton" title="Show the heirlooms at this zone.">
-							Next 5 Here</button><br><br>
-	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at high zone after x number of low zone void maps.">
+	<button type="button" id="highNextFiveButton" title="Show the next 5 heirlooms at this zone.">
+							Next 5 Here</button>
+	<button type="button" id="highNextFiveMaxButton" title="Show the next 5 maximum rarity heirlooms at this zone.">
+							Next 5 Max Rarity Here</button><br><br>
+	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at max rarity zone after advancing RNG at a lower zone.">
 							Search for heirlooms</button>
 </span>
 	
