--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 </head>
 <body>
-<p> Test </p>
+<p> Heirloom Finder </p>
+<p> This tool will help you find good heirlooms, it will probably be most useful during stages where you're trying to find good heirlooms of the next higher rarity than the ones you have. </p>
 <span>  
 	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
 	Zone to advance RNG: <input type="text" id="lowZoneText" title="Lower zone to advance heirloom RNG at or where you typically do voids."/>
