--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <p> This tool will help you find good heirlooms, it will probably be most useful during stages where you're trying to find good heirlooms of the next higher rarity than the ones you have. </p>
 <span>  
 	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
+	<label for="spireChoice">Highest spire you'll clear cell 70:</label>
+		<select name="spire" id="spireChoice">
+			<option value="1">Spire (z200)</option>
+			<option value="2">Spire II (z300)</option>
+			<option value="3">Spire III (z400)</option>
+			<option value="4">Spire IV (z500)</option>
+			<option value="5">Spire V (z600)</option>
+			<option value="6">Spire VI (z700)</option>
+			<option value="7">Spire VII (z800)</option>
+		</select>
 	Zone to advance RNG: <input type="text" id="lowZoneText" title="Lower zone to advance heirloom RNG at or where you typically do voids."/>
 	<input type="radio" name="low" onclick="setLowUniverse(this);" value="1">U1
       	<input type="radio" name="low" onclick="setLowUniverse(this);" value="2">U2
