--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
 	<label for="spireChoice">Highest spire you'll clear cell 70:</label>
 		<select name="spire" id="spireChoice" title="Spires drop an heirloom at cell 70" onchange="setMaxSpire(this.value);">
+			<option value="0">None</option>
 			<option value="1">Spire (z200)</option>
 			<option value="2">Spire II (z300)</option>
 			<option value="3">Spire III (z400)</option>
