--- a/index.html
+++ b/index.html
@@ -1,60 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
 <body>
-<p> Heirloom Finder </p>
-
-<p> This tool will help you find better heirlooms, it will probably be most useful during stages where you're trying to find heirlooms of the next higher rarity than the ones you have. </p>
-<br>
-<p> You can look at what the next 5 heirlooms will be at a given zone, you can also look at what the next 5 heirlooms of the highest possible rarity will be at that zone and how many void maps you need to do to get them</p>
-<p> You can also search for high rarity heirlooms by doing some number of void maps at a lower zone first. Either because void maps are difficult at the higher zone so you don't want to do very many, because you want to do most of your void maps at the lower zone because it's inside of a challenge, or just to change the rng since heirlooms of different rarities advance the rng different amounts.</p>
-<p> For example, if you can do voids at 230+, but normally do them at 215 because of the challenge that ends there; you put 215 in the first box and 230 in the second one. Then hit the search for heirlooms button and it will tell you how many voids to do at 215 followed by more how many more to do at 230 to get the maximum rarity available at 230.</p>
-<br>
-<p> Heirlooms from bones are a separate rng</p>
-<p> Spire cores are on another separate rng</p>
-	
-<span>  
-	Import save: <input type="text" id="saveInput" title="Paste save here"/><br>
-	<label for="spireChoice">Highest spire you'll clear cell 70:</label>
-		<select name="spire" id="spireChoice" title="Spires drop an heirloom at cell 70, if either zone entered in the other boxes is a spire zone, it is assume that voids on that zone are done before cell 70" onchange="setMaxSpire(this.value);">
-			<option value="0">None</option>
-			<option value="1">Spire (z200)</option>
-			<option value="2">Spire II (z300)</option>
-			<option value="3">Spire III (z400)</option>
-			<option value="4">Spire IV (z500)</option>
-			<option value="5">Spire V (z600)</option>
-			<option value="6">Spire VI (z700)</option>
-			<option value="7">Spire VII (z800)</option>
-		</select><br>
-	Zone to advance RNG: <input type="text" id="lowZoneText" title="Lower zone to advance heirloom RNG at or where you typically do voids."/>
-	<input type="radio" name="low" onclick="setLowUniverse(this);" value="1">U1
-      	<input type="radio" name="low" onclick="setLowUniverse(this);" value="2">U2
-	<button type="button" id="lowNextFiveButton" title="Show the next 5 heirlooms at this zone.">
-							Next 5 Here</button><br>
-	Zone for max rarity: <input type="text" id="highZoneText" title="Higher zone with desired heirloom rarity"/>
-	<input type="radio" name="high" onclick="setHighUniverse(this);" value="1">U1
-      	<input type="radio" name="high" onclick="setHighUniverse(this);" value="2">U2
-	<button type="button" id="highNextFiveButton" title="Show the next 5 heirlooms at this zone.">
-							Next 5 Here</button>
-	<button type="button" id="highNextFiveMaxButton" title="Show the next 5 maximum rarity heirlooms at this zone.">
-							Next 5 Max Rarity Here</button><br><br>
-	<button type="button" id="heirloomSearchButton" title="Search for highest rarity heirlooms at max rarity zone after advancing RNG at a lower zone.">
-							Search for heirlooms</button>
-</span>
-	<div class="flex-container"> 
-		<script>
-                
-			for (var i = 0; i <5; i++) {
-                    		document.write('<p id ="heirloom' + i +'" ></p>');
-                	}
-        	</script> 
-	</div>
-	
+<p> Homepage </p>
+<a href="./BlockBreakingGame/index.html">Block Breaking Game</a>
 </body>
-
-	<script src="config.js"></script>
-	<script src="lz-string.js"></script>
-	<script src="rng.js"></script>
 </html>
