--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <p> Homepage </p>
-<a href="./BlockBreakingGame/index.html">Block Breaking Game</a>
+<a href="./BlockBreakingGame">Block Breaking Game</a>
 </body>
 </html>
