added Falling Block Game files
added files
no functionality yet

--- a/FallingBlockGame/index.html
+++ b/FallingBlockGame/index.html
@@ -2,7 +2,7 @@
  <head>
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
    <script src="./sketch.js"></script>
-   <script src="./BlockBreakingGame.js"></script>
+   <script src="./FallingBlockGame.js"></script>
  </head>
  <body>
  </body>
