--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p> Homepage </p>
-<a href="./BlockBreakingGame">Block Breaking Game</a>
+<p> Perry's Programming Portfolio</p>
+<a href="./BlockBreakingGame">Block Breaking Game</a><br><br>
+<a href="./FallingBlockGame">Falling Block Game</a>
 </body>
 </html>
