titles and more shapes
added the rest of the tetrominoes, moved I tetromino closer to it's center of rotation
added titles to each page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>Perry's Programming Portfolio</title>
 <body>
 <p> Perry's Programming Portfolio</p>
 <a href="./BlockBreakingGame">Block Breaking Game</a><br><br>
