--- a/FallingBlockGame/index.html
+++ b/FallingBlockGame/index.html
@@ -3,6 +3,7 @@
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
    <script src="./sketch.js"></script>
    <script src="./FallingBlockGame.js"></script>
+   <title>Falling Block Game</title>
  </head>
  <body>
  </body>
