--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 <p> Perry's Programming Portfolio</p>
 <a href="./BlockBreakingGame">Block Breaking Game</a><br><br>
-<a href="./FallingBlockGame">Falling Block Game</a>
+<a href="./FallingBlockGame">Falling Block Game</a><br><br>
+<a href="https://github.com/PerryAnt/portfolio">C++, python, and data science</a><br><br>
 </body>
 </html>
