--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <title>Perry's Programming Portfolio</title>
 <body>
 <p> Perry's Programming Portfolio</p>
-<a href="./BlockBreakingGame">Block Breaking Game</a><br><br>
-<a href="./FallingBlockGame">Falling Block Game</a><br><br>
+<a href="./BlockBreakingGame">Block Breaking Game (p5)</a><br><br>
+<a href="./FallingBlockGame">Falling Block Game (p5)</a><br><br>
+<a href="./CheckoutLine">Checkout Line (react)</a><br><br>
 <a href="https://github.com/PerryAnt/portfolio">C++, python, and data science</a><br><br>
 </body>
 </html>
