--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p> Perry's Programming Portfolio</p>
 <a href="./BlockBreakingGame">Block Breaking Game (p5)</a><br><br>
 <a href="./FallingBlockGame">Falling Block Game (p5)</a><br><br>
-<a href="./CheckoutLine">Checkout Line (react)</a><br><br>
+<a href="./ReactStuff">React Projects</a><br><br>
 <a href="https://github.com/PerryAnt/portfolio">C++, python, and data science</a><br><br>
 </body>
 </html>
