Added link to dice roller

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <title>Perry's Programming Portfolio</title>
 <body>
 <p> Perry's Programming Portfolio</p>
+<a href="https://perryant-dice-roller.vercel.app/">Dice Roller</a><br><br>
+<a href="./ReactStuff">React Projects</a><br><br>
 <a href="./BlockBreakingGame">Block Breaking Game (p5)</a><br><br>
 <a href="./FallingBlockGame">Falling Block Game (p5)</a><br><br>
-<a href="./ReactStuff">React Projects</a><br><br>
 <a href="https://github.com/PerryAnt/portfolio">C++, python, and data science</a><br><br>
 </body>
 </html>
