--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <a href="./ReactStuff">React Projects</a><br><br>
 <a href="./BlockBreakingGame">Block Breaking Game (p5)</a><br><br>
 <a href="./FallingBlockGame">Falling Block Game (p5)</a><br><br>
+<a href="./CellularAutomata/">Cellular Automata (p5)</a><br><br>
 <a href="https://github.com/PerryAnt/portfolio">C++, python, and data science</a><br><br>
 </body>
 </html>
