--- a/CellularAutomata/index.html
+++ b/CellularAutomata/index.html
@@ -1,10 +1,24 @@
 <html>
  <head>
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+     <link rel="stylesheet" href="styles.css">
+     <title>CellularAutomata</title>
+    </head>
+    <body>
+        <div class="flex">
+            <div id="sketch-holder">
+                <!-- Our sketch will go here! -->
+            </div>
+            <div>
+                <p>Cellular Automata State Transition Rules</p>
+                <p>Dead Cells</p>
+                <div class="flex" id="checkboxes0" title="Check boxes corresponding to number of live neighbors needed around a dead cell to transition to a live cell"></div>
+                <p>Live Cells</p>
+                <div class="flex" id="checkboxes1" title="Check boxes corresponding to number of live neighbors needed around a live cell to stay alive"></div>
+            </div>
+        </div>
+        
+    </body>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
    <script src="./sketch.js"></script>
    <script src="./CellularAutomata.js"></script>
-   <title>CellularAutomata</title>
- </head>
- <body>
- </body>
 </html>
