changed p5 import to https, cleaned up css

--- a/CellularAutomata/index.html
+++ b/CellularAutomata/index.html
@@ -18,7 +18,7 @@
         </div>
         
     </body>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
-   <script src="./sketch.js"></script>
-   <script src="./CellularAutomata.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+    <script src="./sketch.js"></script>
+    <script src="./CellularAutomata.js"></script>
 </html>
