improved formatting of options text

--- a/CellularAutomata/index.html
+++ b/CellularAutomata/index.html
@@ -8,12 +8,12 @@
             <div id="sketch-holder">
                 <!-- Our sketch will go here! -->
             </div>
-            <div>
-                <p>Cellular Automata State Transition Rules</p>
-                <p>Dead Cells</p>
-                <div class="flex" id="checkboxes0" title="Check boxes corresponding to number of live neighbors needed around a dead cell to transition to a live cell"></div>
-                <p>Live Cells</p>
-                <div class="flex" id="checkboxes1" title="Check boxes corresponding to number of live neighbors needed around a live cell to stay alive"></div>
+            <div class="options">
+                <h2>Cellular Automata Options</h2>
+                <p>Dead Cell Transitions</p>
+                <div class="checkbox-container" id="checkboxes0" title="Check boxes corresponding to number of live neighbors needed around a dead cell to transition to a live cell"></div>
+                <p>Live Cell Transitions</p>
+                <div class="checkbox-container" id="checkboxes1" title="Check boxes corresponding to number of live neighbors needed around a live cell to stay alive"></div>
             </div>
         </div>
         
