--- a/CellularAutomata/index.html
+++ b/CellularAutomata/index.html
@@ -10,6 +10,10 @@
             </div>
             <div class="options">
                 <h2>Cellular Automata Options</h2>
+                <label >Grid Size:
+                    <select name="grid-size" id="grid-size">
+                    </select>
+                </label>
                 <p>Dead Cell Transitions</p>
                 <div class="checkbox-container" id="checkboxes0" title="Check boxes corresponding to number of live neighbors needed around a dead cell to transition to a live cell"></div>
                 <p>Live Cell Transitions</p>
