--- a/CellularAutomata/index.html
+++ b/CellularAutomata/index.html
@@ -18,6 +18,19 @@
                 <div class="checkbox-container" id="checkboxes0" title="Check boxes corresponding to number of live neighbors needed around a dead cell to transition to a live cell"></div>
                 <p>Live Cell Transitions</p>
                 <div class="checkbox-container" id="checkboxes1" title="Check boxes corresponding to number of live neighbors needed around a live cell to stay alive"></div>
+                <br/>
+                <p>Move</p>
+                <div>
+                    <button id="scroll-up">^</button>
+                    <div>
+                        <button id="scroll-left"><</button>
+                        <button id="scroll-down">v</button>
+                        <button id="scroll-right">></button>
+                    </div>
+                </div>
+                <p>Zoom</p>
+                <button id="zoom-in">+</button>
+                <button id="zoom-out">-</button>
             </div>
         </div>
         
